Thu Nov 26 12:58:38 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/weight_action.py: Allow norm() to
	  take a maxweight parameter.  Update tests to check this works.

Thu Nov 26 12:54:33 GMT 2009  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update revision numbers.

Thu Nov 26 01:32:29 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py,
	  xappy/unittests/cachemanager.py: Add a new iter_query_strs()
	  method.

Thu Nov 26 00:17:57 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/queryinvert.py:
	  Fully integrate the numpy-based inversion - caching its results
	  for faster application to many subdatabases, and factoring it out
	  as a MixIn.

Wed Nov 25 10:59:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/__init__.py,xappy/cachemanager/generic.py,
	  xappy/cachemanager/xapian_manager.py: Release these files under
	  the MIT/X license.

Wed Nov 25 10:52:12 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/queryinvert.py: Some fairly efficient code to
	  invert lists of docids for queries, thanks to Shane for the
	  original implementation.

Tue Nov 24 11:23:02 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update for new
	  version of Xapian; main difference is a considerable improvement
	  in speed with the chert backend.  WARNING: there appears to be a
	  compiler bug in GCC 4.2 which can cause searches using chert to
	  fail.  If using GCC, I recommend using GCC 4.3 or later to avoid
	  this bug.

Tue Nov 24 10:16:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: Ignore missing docids when applying
	  the cached items to a database - this is likely to be deliberate.

Fri Nov 20 11:16:27 GMT 2009  Richard Boulton <richard@tartarus.org>
